grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    expression_statement: ($) => choice(seq($._expression, ';'), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.macro_invocation,
        $.macro_definition,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.foreign_mod_item,
        $.struct_item,
        $.union_item,
        $.enum_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.use_declaration,
        $.extern_crate_declaration,
        $.static_item
      ),

    // Section - Macro definitions

    _tokens: ($) => choice($.token_tree, $.token_repetition, $.metavariable, $._non_special_token),

    token_tree: ($) =>
      choice(seq('(', repeat($._tokens), ')'), seq('[', repeat($._tokens), ']'), seq('{', repeat($._tokens), '}')),

    inner_attribute_item: ($) => seq('#', '!', '[', $.attribute, ']'),

    attribute: ($) =>
      seq(
        $._path,
        optional(
          choice(seq('=', field('value', $._expression)), field('arguments', alias($.delim_token_tree, $.token_tree)))
        )
      ),

    declaration_list: ($) => seq('{', repeat($._declaration_statement), '}'),

    // Items in `extern` blocks may be `safe` functions and `safe` or `unsafe` statics. `safe` is a keyword only where
    // such an item starts: accepting it on every item would make it one wherever an item can start, breaking its uses as
    // an identifier (`let safe = …; safe = …;`).
    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'struct',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        choice(
          seq(optional($.where_clause), field('body', $.field_declaration_list)),
          seq(field('body', $.ordered_field_declaration_list), optional($.where_clause), ';'),
          ';'
        )
      ),

    ordered_field_declaration_list: ($) =>
      seq(
        '(',
        sepBy(',', seq(repeat($.attribute_item), optional($.visibility_modifier), field('type', $._type))),
        optional(','),
        ')'
      ),

    const_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'const',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        ';'
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        'fn',
        field('name', choice($.identifier, $.metavariable)),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        field('body', $.block)
      ),

    function_signature_item: ($) =>
      seq(optional($.visibility_modifier), optional($.function_modifiers), $._function_signature),

    _function_signature: ($) =>
      seq(
        'fn',
        field('name', choice($.identifier, $.metavariable)),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        ';'
      ),

    function_modifiers: ($) => repeat1(choice('async', 'default', 'const', 'unsafe', $.extern_modifier)),

    impl_item: ($) =>
      seq(
        optional('unsafe'),
        'impl',
        field('type_parameters', optional($.type_parameters)),
        optional(
          seq(
            optional('!'),
            field('trait', choice($._type_identifier, $.scoped_type_identifier, $.generic_type)),
            'for'
          )
        ),
        field('type', $._type),
        optional($.where_clause),
        choice(field('body', $.declaration_list), ';')
      ),

    trait_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional('unsafe'),
        'trait',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        field('bounds', optional($.trait_bounds)),
        optional($.where_clause),
        field('body', $.declaration_list)
      ),

    type_parameters: ($) =>
      prec(
        1,
        seq(
          '<',
          sepBy1(
            ',',
            seq(
              repeat($.attribute_item),
              choice($.metavariable, $.type_parameter, $.lifetime_parameter, $.const_parameter)
            )
          ),
          optional(','),
          '>'
        )
      ),

    type_parameter: ($) =>
      prec(
        1,
        seq(
          field('name', $._type_identifier),
          optional(field('bounds', $.trait_bounds)),
          optional(seq('=', field('default_type', $._type)))
        )
      ),

    parameters: ($) =>
      seq(
        '(',
        sepBy(
          ',',
          seq(repeat($.attribute_item), choice($.parameter, $.self_parameter, $.variadic_parameter, '_', $._type))
        ),
        optional(','),
        ')'
      ),

    self_parameter: ($) => seq(optional('&'), optional($.lifetime), optional($.mutable_specifier), $.self),

    visibility_modifier: ($) =>
      choice($.crate, seq('pub', optional(seq('(', choice($.self, $.super, $.crate, seq('in', $._path)), ')')))),

    // Section - Types

    _type: ($) =>
      choice(
        $.abstract_type,
        $.reference_type,
        $.metavariable,
        $.pointer_type,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.unit_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.macro_invocation,
        $.never_type,
        $.dynamic_type,
        $.bounded_type,
        $.removed_trait_bound,
        alias(choice(...primitiveTypes), $.primitive_type)
      ),

    generic_type: ($) =>
      prec(
        1,
        seq(
          field('type', choice($._type_identifier, $._reserved_identifier, $.scoped_type_identifier)),
          field('type_arguments', $.type_arguments)
        )
      ),

    type_arguments: ($) =>
      seq(
        token(prec(1, '<')),
        sepBy1(',', seq(choice($._type, $.type_binding, $.lifetime, $._literal, $.block), optional($.trait_bounds))),
        optional(','),
        '>'
      ),

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        prec(1, $.macro_invocation),
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_ending_with_block: ($) =>
      choice(
        $.unsafe_block,
        $.async_block,
        $.gen_block,
        $.try_block,
        $.block,
        $.if_expression,
        $.match_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.const_block
      ),

    macro_invocation: ($) =>
      seq(
        field(
          'macro',
          choice(
            $.scoped_identifier,
            $.identifier,
            alias(choice(...primitiveTypes), $.identifier),
            $._reserved_identifier
          )
        ),
        '!',
        alias($.delim_token_tree, $.token_tree)
      ),

    unary_expression: ($) => prec(PREC.unary, seq(choice('-', '*', '!'), $._expression)),

    binary_expression: ($) => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.bitand, '&'],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.comparative, choice('==', '!=', '<', token(prec(2, '<=')), '>', '>=')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field('left', $._expression), field('operator', operator), field('right', $._expression))
          )
        )
      );
    },

    call_expression: ($) =>
      prec(PREC.call, seq(field('function', $._expression_except_range), field('arguments', $.arguments))),

    arguments: ($) => seq('(', sepBy(',', seq(repeat($.attribute_item), $._expression)), optional(','), ')'),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field('value', $._expression),
          '.',
          field('field', choice($._field_identifier, alias(/[0-9][0-9_]*/, $.integer_literal)))
        )
      ),

    block: ($) => seq(optional(seq($.label, ':')), '{', repeat($._statement), optional($._expression), '}'),

    // Section - Patterns

    _literal: ($) =>
      choice(
        $.string_literal,
        $.raw_string_literal,
        $.char_literal,
        $.boolean_literal,
        $.integer_literal,
        $.float_literal
      ),

    integer_literal: () =>
      token(
        choice(
          seq(
            choice(/[1-9][0-9_]*/, /0[0-9_]+/, /0b_*[01][01_]*/, /0o_*[0-7][0-7_]*/),
            optional(numericSuffixWithoutExponent)
          ),
          /0[box]_+/,
          seq('0', optional(zeroNumericSuffix)),
          seq(/0x_*[0-9a-fA-F][0-9a-fA-F_]*/, optional(hexadecimalSuffix))
        )
      ),

    _path: ($) =>
      choice(
        $.self,
        alias(choice(...primitiveTypes), $.identifier),
        $.metavariable,
        $.super,
        $.crate,
        $.identifier,
        $.scoped_identifier,
        $._reserved_identifier
      ),

    identifier: () => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/u,

    // oxlint-disable-next-line no-useless-escape -- tree-sitter's regex parser rejects an unescaped `[` in a character class.
    _reserved_identifier: ($) => alias(choice('default', 'union', 'gen', 'raw'), $.identifier),

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    self: () => 'self',
    crate: () => 'crate',
